--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Hello, world!</title>
+    <title>Books4You.com - Online book store - Strive Shool Homework</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
